test/cases/good/extra003.lat
int main() {
    while(false) { printInt(10); }
    while(false) printInt(10);
    if (false) { printInt(10); }
    if (false) printInt(10);

    return 0;
}