test/cases/bad/bad033.lat
// Conflicting return type

int foo() {
    return "42";
}

int main() {
    return 0;
}